# chappie

./: .gitignore  Cargo.toml  README.md  mise.toml
.claude/: settings.json
benchmarks/: history.tsv  sweep-20260702T221448Z.summary.md  sweep-20260702T221448Z.tsv
configs/: example.conf
crates/chappie-brain/: Cargo.toml
crates/chappie-brain/src/: lib.rs
crates/chappie-burn/: Cargo.toml
crates/chappie-burn/src/: lib.rs
crates/chappie-cli/: Cargo.toml
crates/chappie-cli/src/: main.rs
crates/chappie-core/: Cargo.toml
crates/chappie-core/src/: lib.rs
crates/chappie-examiner/: Cargo.toml
crates/chappie-examiner/src/: lib.rs
crates/chappie-harness/: Cargo.toml
crates/chappie-harness/src/: lib.rs
crates/chappie-world/: Cargo.toml
crates/chappie-world/src/: lib.rs
docs/: CNAME  hud.html  hud.json  index.html
docs/concepts/: 01-thesis.md  02-architecture.md  03-memory.md  04-sleep-and-dreaming.md  05-cognition.md  06-development.md  07-open-questions.md  08-valence-and-drives.md  09-growth-and-pruning.md  10-limits-and-measurements.md  11-committee-vs-monolith.md  12-gatekeeper.md  13-learned-coordinator.md  14-hud.md  README.md
scripts/: bench.sh  sweep.sh
